src/index.css
/* ... */
th {
  text-align: start;
  font-family: var(--font-display);
}

sup {
  line-height: 1.0;
}

em, strong {
  font-family: var(--font-display);
}

code, kbd, pre, samp, var {
  font-family: var(--font-code);
}

pre {
  font-size: var(--font-size-small);
}

code, kbd, samp, var {
  line-height: 1.0;
}

kbd {
  padding-block: 1px;
  padding-inline: 0.5ch;
  margin-inline: 2px;
  vertical-align: 2px;
  border: 1px solid currentColor;
  border-radius: var(--basic-border-radius);
  box-shadow: 0 2px 0 1px currentColor;
  font-size: var(--font-size-x-small);
  line-height: 1.0;
}

summary {
  cursor: pointer;
}

a {
  color: var(--red-6);
  text-underline-offset: 2px;
}

a:not([class]) {
  overflow-wrap: anywhere;
  hyphens: auto;
  -webkit-hyphens: auto;
}

a:hover {
  text-decoration: none;
}

/* Layouts  {{{1 */

.l-header {
  padding-block: var(--line-feed);
  background-color: var(--gray-10);
  color: var(--red-1);
}

.l-main {
  padding-block: var(--line-feed);
}

.l-container {
  margin-inline: auto;
  padding-inline: calc(var(--line-feed) / 2);
  max-inline-size: var(--line-length);
}

.l-footer {
  padding-block: calc(var(--line-feed) - 1px) var(--line-feed);
  border-block-start: 1px dashed currentColor;
}

.l-article-header {
  padding-block: var(--line-feed);
  background-color: var(--red-3);
}

.l-article-main {
  padding-block-start: var(--line-feed);
}

.l-article-footer {
  padding-block: calc(var(--line-feed) - 1px) var(--line-feed);
  border-block-start: 1px dashed currentColor;
  background-color: var(--red-2);
}

.l-page {
  padding-block: var(--line-feed);
}

/* Components  {{{1 */
/* .button  {{{2 */

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  color: var(--button-color);
  background-color: var(--button-background-color, transparent);
  border: var(--button-border-size, 0px) solid var(--button-border-color, transparent);
  border-radius: var(--button-radiuis, var(--basic-border-radius));
  font-family: var(--font-display);
}

a.button {
  text-decoration: none;
}

.button.is-outlined {
  --button-color: var(--gray-10);
  --button-border-size: 2px;
  --button-border-color: var(--gray-10);
  padding-block: calc(var(--line-feed) / 4 - var(--button-border-size, 0px));
  padding-inline: 2ch;
  box-shadow: 2px 2px var(--button-shadow-color, var(--gray-4));
}

.button.is-outlined:hover {
  --button-color: var(--red-1);
  --button-background-color: var(--gray-10);
}

.button.is-filled {
  --button-color: var(--red-1);
  --button-background-color: var(--gray-10);
  padding-block: calc(var(--line-feed) / 4 - var(--button-border-size, 0px));
  padding-inline: 2ch;
}

.button.is-filled:hover {
  --button-background-color: var(--gray-9);
}

.button.is-circle {
  --button-color: currentColor;
  --button-border-size: 1px;
  --button-border-color: currentColor;
  --button-radiuis: 50%;
  --button-background-color: var(--red-1);
  block-size: calc(var(--line-feed) * 2);
  inline-size: calc(var(--line-feed) * 2);
  box-shadow: 2px 2px var(--button-shadow-color, var(--gray-4));
}

.button.is-circle:hover {
  --button-background-color: var(--gray-2);
}

/* .figure  {{{2 */
/* Common  {{{3 */

.figure-caption {
  color: var(--gray-7);
}

.figure-caption::before {
  font-weight: bold;
}

.figure:is(.is-table, .is-html) > .figure-body {
  overflow-x: auto;
}

.figure:is(.is-table, .is-html) > .figure-body::-webkit-scrollbar {
  inline-size: calc(var(--basic-border-radius) * 2);
  block-size: calc(var(--basic-border-radius) * 2);
}

.figure:is(.is-table, .is-html) > .figure-body::-webkit-scrollbar-thumb {
  background-clip: padding-box;
  background-color: var(--gray-10);
  border: 2px solid transparent;
}

/* Link  {{{3 */

.figure.is-link > .figure-body > a {
  display: block;
  padding: calc(var(--line-feed) / 2 - 2px);
  text-decoration: none;
  color: inherit;
  border: 1px solid var(--link-border-color, var(--gray-5));
  border-radius: var(--basic-border-radius);
  box-shadow: 2px 2px var(--link-shadow-color, var(--gray-3));
  font-family: var(--font-display);
  font-weight: bold;
}

.figure.is-link > .figure-body > a:hover {
  --link-border-color: var(--red-6);
  --link-shadow-color: var(--red-3);
}

.figure.is-link > .figure-body > a[data-domain]::after {
  content: attr(data-domain);
  display: block;
  padding-inline-start: calc(16px + 0.5ch);
  font-size: var(--font-size-small);
  font-weight: normal;
  overflow-wrap: anywhere;
  color: var(--gray-7);
  background-image: var(--favicon);
  background-repeat: no-repeat;
  background-size: 16px 16px;
  background-position: left center;
}

/* Code  {{{3 */

.figure.is-code {
  --r: var(--basic-border-radius);
  position: relative;
  counter-increment: code-count;
}

.figure.is-code > .figure-caption::before {
  content: 'Code ' counter(code-count) '. ';
}

.figure.is-code[data-language]::before {
  content: attr(data-language);
  position: absolute;
  inset-block-start: 0;
  inset-inline-end: calc(var(--line-feed) / 2);
  padding-block: 2px;
  padding-inline: 1ch;
  border-inline: var(--r) solid #0000;
  border-radius: 0 0 calc(2 * var(--r)) calc(2 * var(--r)) / var(--r);
  mask: radial-gradient(var(--r) at var(--r) var(--r), #0000 99%, #000 101%)
          calc(-1 * var(--r)) 0 / 100% var(--r) repeat-x,
        conic-gradient(#000 0 0) padding-box;
  -webkit-mask: radial-gradient(var(--r) at var(--r) var(--r), #0000 99%, #000 101%)
                  calc(-1 * var(--r)) 0 / 100% var(--r) repeat-x,
                conic-gradient(#000 0 0) padding-box;
  color: var(--code-label-color, var(--gray-10));
  background-color: var(--code-label-background-color, var(--gray-4));
  font-family: var(--font-display);
  font-weight: bold;
  font-size: var(--font-size-xx-small);
  line-height: 1.0;
}
/* ... */

